--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 
   <div class="attribution">
     Challenge by
-    <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="#">TM
+    Frontend Mentor. Coded by <a href="#">TM
       Jackson</a>.
   </div>
 </body>
