--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <script src="script.js" defer></script>
 
-  <title>Frontend Mentor | Insure landing page</title>
+  <title>Insure | Website</title>
 
 </head>
 
